# pkgs

./: .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  README.md  README.zh-CN.md  cliff.toml  justfile
src/: lib.rs  main.rs  meta.rs
src/cli/: error.rs  mod.rs  modules.rs
src/config/: de_map_as_vec.rs  error.rs  mod.rs  name_package.rs  named_package.rs  read.rs  var.rs
src/core/: load.rs  mod.rs  named_package.rs  unload.rs  utils.rs
src/fs/: home.rs  mod.rs  symlink.rs
src/logger/: logger.rs  message.rs  mod.rs  output.rs
src/runner/: error.rs  load.rs  mod.rs  rollback.rs  rw.rs  unload.rs
src/test_utils/: file.rs  mod.rs  package.rs
src/test_utils/matchers/: is_symlink_for.rs  mod.rs
src/trace/: io.rs  mod.rs  trace.rs
tests/: schema.rs
