[package]
name = "pkgs-cli"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0"
authors = ["SuniRein <sunireincn@gmail.com>"]
description = "A simple cli tool to manage packages."
repository = "https://github.com/SuniRein/pkgs"

[lib]
name = "pkgs"
path = "src/lib.rs"

[[bin]]
name = "pkgs"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.99"
clap = { version = "4.5.45", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde-tuple-vec-map = "1.0.1"
thiserror = "2.0.16"
toml = "0.9.5"

[dev-dependencies]
googletest = "0.14.2"
indoc = "2.0.6"
serde_test = "1.0.177"
tempfile = "3.21.0"
